--- a/style/style.css
+++ b/style/style.css
@@ -10,5 +10,51 @@ body {
   font-family: Work Sans;
 }
 /* Reset Code End */
-
+header {
+  background-color: #fff4e7;
+  padding-bottom: 30px;
+}
+/* Nav Section Code Start */
+nav {
+  width: 80%;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+nav,
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .nav-logo {
+  font-size: 2rem;
+  font-weight: 700;
+}
+#click,
+.menu-btn {
+  display: none;
+}
+.menu-btn {
+  color: white;
+  font-size: 22px;
+  cursor: pointer;
+  color: #424242;
+}
+ul li {
+  list-style: none;
+  padding-left: 15px;
+}
+ul li a:hover {
+  background-color: #1e90ff;
+  color: white;
+}
+ul li a {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  color: #424242;
+  padding: 10px 15px;
+  border-radius: 5px;
+}
+/* Nav Section Code End */
 
