--- a/style/style.css
+++ b/style/style.css
@@ -152,3 +152,71 @@ ul li a {
   border-radius: 5px;
 }
 /* Quick List Section Code End Here */
+/* Future Section Code Start  */
+#features-container {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+.features-text-container {
+  width: 40%;
+  margin-top: 12px;
+}
+.features-text-container h2 {
+  border-left: 5px solid #ff900e;
+  font-size: 2.5rem;
+  font-weight: 700;
+  padding-left: 5%;
+  margin-bottom: 24px;
+}
+.features-text-container p {
+  font-size: 1rem;
+  color: #727272;
+  margin-bottom: 30px;
+  text-align: justify;
+  line-height: 23px;
+}
+.features-singel-div {
+  box-shadow: 5px 5px 10px gray;
+  border-radius: 10px;
+  padding: 15px 25px 0 25px;
+}
+.features-singel-div h3 {
+  margin-bottom: 15px;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.features-singel-div p {
+  padding-bottom: 18px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #727272;
+  text-align: justify;
+  line-height: 25px;
+}
+.features-images-container {
+  width: 53%;
+}
+.features-images-container img {
+  width: 100%;
+}
+.features-images-container button {
+  padding: 35px 40px;
+  background-color: #ff900e;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  font-weight: 400;
+  position: relative;
+  bottom: 85px;
+  right: 45px;
+}
+.features-images-container button span {
+  font-size: 3rem;
+  font-weight: 700;
+}
+/* Future Section Code End  */
