--- a/style/responsive.css
+++ b/style/responsive.css
@@ -76,6 +76,30 @@
     padding: 25px 35px;
   }
   /* Features Section Code End Here */
+  /* Some Facts Section Code Start */
+  #some-facts-container {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .some-facts-title {
+    width: 80%;
+  }
+  .some-facts-card-container {
+    width: 80%;
+    margin: 0 auto;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  /* Some Facts Section Code End */
+}
+
+@media screen and (min-width: 940.1px) and (max-width: 1180px) {
+  .some-facts-card-container {
+    width: 80%;
+    margin: 0 auto;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 /* Mobile View Responsive Design */
@@ -157,4 +181,20 @@
     padding: 25px 35px;
   }
   /* Features Section Code End */
+  /* Some Facts Section Code Start */
+  #some-facts-container {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .some-facts-title {
+    width: 100%;
+  }
+  .some-facts-card-container {
+    width: 70%;
+    margin: 0 auto;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  /* Some Facts Section Code End */
 }
